--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -8,7 +8,7 @@ spec:
   selector:
     matchLabels:
       app: goserver
-  replicas: 10
+  replicas: 1
   template:
     metadata:
       labels:
@@ -16,4 +16,9 @@ spec:
     spec:
       containers:
         - name: "goserver"
-          image: "wesleywillians/hello-go:v3"
+          image: "wesleywillians/hello-go:v4"
+          env:
+            - name:  NAME
+              value: "Joao"
+            - name: AGE
+              value: "36"
