--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,18 +16,18 @@ spec:
     spec:
       containers:
         - name: "goserver"
-          image: "wesleywillians/hello-go:v4"
+          image: "wesleywillians/hello-go:v5.1"
           envFrom:
             - configMapRef:
                 name: goserver-env
-          # env:
-          #   - name:  NAME
-          #     valueFrom:
-          #       configMapKeyRef:
-          #         name: goserver-env
-          #         key: NAME
-          #   - name: AGE
-          #     valueFrom:
-          #       configMapKeyRef:
-          #         name: goserver-env
-          #         key: AGE
+          volumeMounts:
+            - mountPath: "/go/myfamily"
+              name: config
+              readOnly: true
+      volumes:
+        - name: config
+          configMap:
+            name: configmap-family
+            items:
+            - key: members
+              path: "family.txt"
