--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,15 +16,15 @@ spec:
     spec:
       containers:
         - name: "goserver"
-          image: "wesleywillians/hello-go:v5.3"
-          livenessProbe:
+          image: "wesleywillians/hello-go:v5.4"
+          readinessProbe:
             httpGet:
               path: /healthz
               port: 8000
-            periodSeconds: 5
-            failureThreshold: 3
+            periodSeconds: 3
+            failureThreshold: 1
             timeoutSeconds: 1
-            successThreshold: 1
+            initialDelaySeconds: 10
           envFrom:
             - configMapRef:
                 name: goserver-env
