Combining liveness and readiness

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: "goserver"
-          image: "wesleywillians/hello-go:v5.4"
+          image: "wesleywillians/hello-go:v5.5"
           readinessProbe:
             httpGet:
               path: /healthz
@@ -25,6 +25,17 @@ spec:
             failureThreshold: 1
             timeoutSeconds: 1
             initialDelaySeconds: 10
+
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 8000
+            periodSeconds: 5
+            failureThreshold: 1
+            timeoutSeconds: 1
+            successThreshold: 1
+            initialDelaySeconds: 15
+
           envFrom:
             - configMapRef:
                 name: goserver-env
