--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -17,6 +17,13 @@ spec:
       containers:
         - name: "goserver"
           image: "wesleywillians/hello-go:v5.5"
+          startupProbe:
+            httpGet:
+              path: /healthz
+              port: 8000
+            periodSeconds: 3
+            failureThreshold: 30
+
           readinessProbe:
             httpGet:
               path: /healthz
@@ -24,7 +31,7 @@ spec:
             periodSeconds: 3
             failureThreshold: 1
             timeoutSeconds: 1
-            initialDelaySeconds: 10
+            # initialDelaySeconds: 10
 
           livenessProbe:
             httpGet:
@@ -34,7 +41,7 @@ spec:
             failureThreshold: 1
             timeoutSeconds: 1
             successThreshold: 1
-            initialDelaySeconds: 15
+            # initialDelaySeconds: 15
 
           envFrom:
             - configMapRef:
