Applying deploment with resourcers

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -17,6 +17,15 @@ spec:
       containers:
         - name: "goserver"
           image: "wesleywillians/hello-go:v5.5"
+
+          resources:
+            requests:
+              cpu: 100m
+              memory: 20Mi
+            limits:
+              cpu: 500m
+              memory: 25Mi
+
           startupProbe:
             httpGet:
               path: /healthz
