Preparing tech talk

--- a/k8s/replicaset.yaml
+++ b/k8s/replicaset.yaml
@@ -16,4 +16,4 @@ spec:
     spec:
       containers:
         - name: "goserver"
-          image: "wesleywillians/hello-go:latest"
+          image: "wesleywillians/hello-go:v2"
