--- a/k8s/service-clusterIpv1.yaml
+++ b/k8s/service-clusterIpv1.yaml
@@ -3,12 +3,10 @@ kind: Service
 metadata:
   name:  goserver-service
 spec:
-  selector:
+  selector: 
     app: goserver
-  type: NodePort
+  type: ClusterIP
   ports:
   - name: goserver-service
     port: 80
-    targetPort: 8000
     protocol: TCP
-    nodePort: 30001 #30.000 - 32.767
