--- a/k8s/pod.yaml
+++ b/k8s/pod.yaml
@@ -7,4 +7,4 @@ metadata:
 spec:
   containers:
     - name: "goserver"
-      image: "netflkx:latest"
+      image: "wesleywillians/hello-go:latest"
